Fixed swagger for average since it doesn't have its parameters in json but in the url
